--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/base:bookworm
+FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
 
 ## Setup
 RUN apt-get update
@@ -6,8 +6,8 @@ RUN apt-get update
 ## Kamal environment
 RUN <<EOF
 apt-get install -y --no-install-recommends \
-    ruby-full=1:3.1 \
-    build-essential=12.9
+    ruby-full=1:3.2~ubuntu1 \
+    build-essential=12.10ubuntu1
 gem install kamal
 EOF
 
@@ -15,9 +15,9 @@ EOF
 RUN <<EOF
 apt-get update
 apt-get install -y --no-install-recommends \
-    golang=2:1.19~1 \
-    gopls=1:0.5.0+ds-1 \
-    delve=1.20.2-1
+    golang=2:1.22~2build1 \
+    gopls=1:0.18.0+ds-1ubuntu0.24.04.2 \
+    delve=1.22.1-1
 EOF
 
 ## Cleanup
