--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,13 +12,10 @@ gem install kamal
 EOF
 
 ## Golang environment
-RUN <<EOF
-apt-get update
-apt-get install -y --no-install-recommends \
-    golang=2:1.22~2build1 \
-    gopls=1:0.18.0+ds-1ubuntu0.24.04.2 \
-    delve=1.22.1-1
-EOF
+RUN apt-get install -y --no-install-recommends \
+        golang=2:1.22~2build1 \
+        gopls=1:0.18.0+ds-1ubuntu0.24.04.2 \
+        delve=1.22.1-1
 
 ## Cleanup
 RUN rm -rf /var/lib/apt/lists/*
