terraform exoscale infra

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,19 @@
 FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
 
 ## Setup
-RUN apt-get update
+RUN <<EOF
+wget -O - https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list
+apt-get update
+EOF
 
 ## Kamal environment
 RUN <<EOF
 apt-get install -y --no-install-recommends \
-    ruby-full=1:3.2~ubuntu1 \
-    build-essential=12.10ubuntu1
-gem install kamal
+    ruby-full \
+    build-essential \
+    terraform
+gem install kamal --version=2.4.0
 EOF
 
 ## Cleanup
