--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,24 +1,18 @@
 # Name of your application. Used to uniquely configure containers.
-service: ourcloud
+service: vote
 
 # Name of the container image.
-image: bcachet/ourcloud
+image: bcachet/votingapp/vote
 
 # Deploy to these servers.
 servers:
   web:
     - 192.168.0.1
-  # job:
-  #   hosts:
-  #     - 192.168.0.1
-  #   cmd: bin/jobs
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
-#
-# Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
-  ssl: true
+  ssl: false
   host: app.example.com
   # Proxy connects to your container on port 80 by default.
   app_port: 80
@@ -35,9 +29,6 @@ registry:
 # Configure builder setup.
 builder:
   arch: amd64
-  # Pass in additional build args needed for your Dockerfile.
-  # args:
-  #   RUBY_VERSION: <%= File.read('.ruby-version').strip %>
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 #
