--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -9,9 +9,9 @@ image: bcachet/votingapp/vote
 primary_role: vote
 servers:
   vote:
-    - 194.182.161.243
+    - 194.182.161.194
   db:
-    - 194.182.163.164
+    - 159.100.242.73
 
 proxy:
   ssl: false
@@ -39,6 +39,11 @@ builder:
   dockerfile: ./vote/Dockerfile
   context: ./vote
 
+logging:
+  driver: json-file
+  options:
+    max-size: 100m
+
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 #
 # env:
@@ -55,11 +60,11 @@ builder:
 
 # Use a different ssh user than root
 ssh:
+  keys:
+    - ./config/private_key.pem
   user: ubuntu
   port: 22
   keys_only: true
-  # key_data: [ SSH_DEPLOYMENT_PRIVATE_KEY ]
-  keys: [ "config/private.key" ]
   config: false
 
 # Use a persistent storage volume.
