--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
 			"extensions": [
 				"ms-azuretools.vscode-docker",
 				"redhat.vscode-yaml",
-				"HashiCorp.terraform"
+				"HashiCorp.terraform",
+				"ms-python.python"
 			]
 		}
 	}
