--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -15,9 +15,9 @@ servers:
 
 proxy:
   ssl: false
-  # When no hosts are set, all requests are forwarded to container
+  ## When no hosts are set, all requests are forwarded to container
   # host: 
-  # Proxy connects to your container on port 80 by default.
+  ## Proxy connects to your container on port 80 by default.
   app_port: 5000
   healthcheck:
     interval: 1
@@ -28,8 +28,6 @@ proxy:
 registry:
   server: ghcr.io
   username: bcachet
-
-  # Always use an access token rather than real password (pulled from .kamal/secrets).
   password:
     - GHCR_REGISTRY_PASSWORD
 
@@ -45,12 +43,12 @@ logging:
     max-size: 100m
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
-#
-# env:
-#   clear:
-#     DB_HOST: 192.168.0.2
-#   secret:
-#     - RAILS_MASTER_KEY
+env:
+  clear:
+    REDIS_URL: redis://194.182.161.194:6379
+    BACKEND: db
+  # secret:
+  #   - RAILS_MASTER_KEY
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
