--- a/config/registry.yml
+++ b/config/registry.yml
@@ -2,5 +2,4 @@
 registry:
   server: ghcr.io
   username: bcachet
-  password:
-    - GHCR_REGISTRY_PASSWORD
+  password: <%= ENV.fetch('GHCRIO_TOKEN') %>
