--- a/config/deploy-vote-ui.yml
+++ b/config/deploy-vote-ui.yml
@@ -1,12 +1,12 @@
 # deployment files are ERB files
-<% require "dotenv"; Dotenv.load("../.env") %>
+<% require "dotenv"; Dotenv.load(".env") %>
 
 # Name of your application
 # Used to uniquely configure containers.
-service: vote
+service: vote-ui
 
 # Name of the container image under which it will be pushed/pulled to/from registry
-image: bcachet/votingapp/vote
+image: bcachet/votingapp/vote-ui
 
 # Define role to be 
 primary_role: web
@@ -15,18 +15,17 @@ servers:
     hosts: <%= ENV.fetch('WEB_SERVERS').split(' ') %>
     env:
       clear:
-        REDIS_URL: "redis://<%= ENV.fetch('REDIS_SERVER') %>:6379"
-        BACKEND: db
+        VOTE_URL: http://127.0.0.1:5000/
     # Configure kamal-proxy to route traffic to our service/container
     proxy:
       ssl: false
       ## When no hosts are set, all requests are forwarded to container
       # host: nil
       ## Proxy connects to your container on port 80 by default.
-      app_port: 5000
+      app_port: 80
       healthcheck:
         interval: 1
-        path: /healthz
+        path: /
         timeout: 5
     logging:
       driver: json-file
@@ -36,32 +35,15 @@ servers:
 # Configure builder setup.
 builder:
   arch: amd64
-  dockerfile: ./Dockerfile
-  context: ./
-
-# Accessories are dependencies of our service
-accessories:
-  redis:
-    service: redis
-    image: valkey/valkey:8
-    hosts: <%= [ ENV.fetch('REDIS_SERVER') ] %>
-    port: 6379
-    directories:
-      - data:/data
-    options:
-      restart: always
-    proxy: false
+  dockerfile: ./vote-ui/Dockerfile
+  context: ./vote-ui/
 
 # SSH configuration comes from external file to be shared amongst deployment
 <%
-template = File.read('../config/ssh.yml')
+template = File.read('./config/ssh.yml')
 ssh = ERB.new(template)
 %>
 <%= ssh.result %>
 
 # Registry configuration come from external file to be shared accross all deployments
-<%
-template = File.read('../config/registry.yml')
-reg = ERB.new(template)
-%>
-<%= reg.result %>
+<%= File.read('./config/registry.yml') %>
