--- a/config/registry.yml
+++ b/config/registry.yml
@@ -2,4 +2,5 @@
 registry:
   server: ghcr.io
   username: bcachet
-  password: <%= ENV.fetch('GHCRIO_TOKEN') %>
+  password:
+    - GHCR_REGISTRY_PASSWORD
