--- a/vote-ui/Dockerfile
+++ b/vote-ui/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:1.22-alpine
 COPY . /usr/share/nginx/html
-COPY default.conf.tmpl /etc/nginx/templates/default.conf.tmpl
+COPY vote-ui.conf.tmpl /etc/nginx/templates/vote-ui.conf.template
 COPY nginx.conf /etc/nginx/nginx.conf
