--- a/config/deploy-vote.yml
+++ b/config/deploy-vote.yml
@@ -13,15 +13,20 @@ primary_role: vote
 servers:
   vote:
     hosts: <%= ENV.fetch('WEB_SERVERS').split(' ') %>
-    options:
-      publish: "5000:5000"
-      network: kamal
     env:
       clear:
         REDIS_URL: "redis://<%= ENV.fetch('REDIS_SERVER') %>:6379"
         BACKEND: db
     # Configure kamal-proxy to route traffic to our service/container
-    proxy: false
+    proxy:
+      ssl: false
+      ## When no hosts are set, all requests are forwarded to container
+      host: vote
+      app_port: 5000
+      healthcheck:
+        interval: 1
+        path: /healthz
+        timeout: 5
     logging:
       driver: json-file
       options:
