--- a/vote/config/deploy.yml
+++ b/vote/config/deploy.yml
@@ -3,25 +3,29 @@
 
 # Name of your application
 # Used to uniquely configure containers.
-service: vote-ui
+service: vote
 
 # Name of the container image under which it will be pushed/pulled to/from registry
-image: bcachet/votingapp/vote-ui
+image: bcachet/votingapp/vote
 
 # Define role to be 
-primary_role: ui
+primary_role: vote
 servers:
-  ui:
+  vote:
     hosts: <%= ENV.fetch('WEB_SERVERS').split(' ') %>
+    env:
+      clear:
+        REDIS_URL: "redis://<%= ENV.fetch('REDIS_SERVER') %>:6379"
+        BACKEND: db
     # Configure kamal-proxy to route traffic to our service/container
     proxy:
       ssl: false
       ## When no hosts are set, all requests are forwarded to container
-      # host: nil
-      app_port: 80
+      host: vote
+      app_port: 5000
       healthcheck:
         interval: 1
-        path: /
+        path: /healthz
         timeout: 5
     logging:
       driver: json-file
@@ -31,15 +35,30 @@ servers:
 # Configure builder setup.
 builder:
   arch: amd64
-  dockerfile: ./vote-ui/Dockerfile
-  context: ./vote-ui/
+  dockerfile: Dockerfile
+  context: .
+
+# Accessories are dependencies of our service
+accessories:
+  redis:
+    service: redis
+    image: valkey/valkey:8
+    hosts: <%= [ ENV.fetch('REDIS_SERVER') ] %>
+    port: 6379
+    directories:
+      - data:/data
+    options:
+      restart: always
+    proxy: false
 
 # SSH configuration comes from external file to be shared amongst deployment
 <%
-template = File.read('./config/ssh.yml')
+template = File.read('../kamal/ssh.yml')
 ssh = ERB.new(template)
 %>
 <%= ssh.result %>
 
 # Registry configuration come from external file to be shared accross all deployments
-<%= File.read('./config/registry.yml') %>
+<%= File.read('../kamal/registry.yml') %>
+
+hooks_path: ../kamal/hooks
