--- a/worker/config/deploy.yml
+++ b/worker/config/deploy.yml
@@ -16,16 +16,7 @@ servers:
     env:
       clear:
         REDIS_URL: "redis://<%= ENV.fetch('DB_SERVER') %>:6379"
-    # Configure kamal-proxy to route traffic to our service/container
-    proxy:
-      ssl: false
-      ## When no hosts are set, all requests are forwarded to container
-      host: worker
-      app_port: 5000
-      healthcheck:
-        interval: 1
-        path: /healthz
-        timeout: 5
+    proxy: false
     logging:
       driver: json-file
       options:
