SSH via file instead of environment variable

--- a/kamal/ssh.yml
+++ b/kamal/ssh.yml
@@ -1,5 +1,6 @@
 ssh:
-  key_data: <%= [ ENV.fetch('PRIVATE_SSH_KEY') ] %>
+  keys: ['../config/private_key.pem']
   user: ubuntu
   port: 22
+  keys_only: true
   config: false
