--- a/vote-ui/config/deploy.yml
+++ b/vote-ui/config/deploy.yml
@@ -35,11 +35,7 @@ builder:
   context: .
 
 # SSH configuration comes from external file to be shared amongst deployment
-<%
-template = File.read('../kamal/ssh.yml')
-ssh = ERB.new(template)
-%>
-<%= ssh.result %>
+<%= File.read('../kamal/ssh.yml') %>
 
 # Registry configuration come from external file to be shared accross all deployments
 <%
