--- a/vote/config/deploy.yml
+++ b/vote/config/deploy.yml
@@ -52,11 +52,7 @@ accessories:
     proxy: false
 
 # SSH configuration comes from external file to be shared amongst deployment
-<%
-template = File.read('../kamal/ssh.yml')
-ssh = ERB.new(template)
-%>
-<%= ssh.result %>
+<%= File.read('../kamal/ssh.yml') %>
 
 # Registry configuration come from external file to be shared accross all deployments
 <%
